Fix avatar position in footer on mobile (#3781)
* Fix avatar unnecessarily shifting by 50px in the footer on mobile

* Update _formatters.scss

* Move mobile menu on homepage override to col1 on homepage instead of avatar

* Add release notes for #3781

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_formatters.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_formatters.scss
@@ -37,10 +37,6 @@
             border-radius: 0;
         }
     }
-
-    @media screen and (max-width: $breakpoint-mobile) {
-        left: $mobile-nav-indent;
-    }
 }
 
 .media-placeholder {
